crates/cognicode-macros/tests/newtype-ui/newtype_multiple_fields.stderr
error: expected attribute, found derive macro `newtype`
 --> tests/newtype-ui/newtype_multiple_fields.rs
  |
  | #[newtype]
  |   ^^^^^^^ not an attribute
